--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@angular/material": "^20.0.5",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@emailjs/browser": "^4.4.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@angular/build": "^20.0.5",
