--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@emailjs/browser": "^4.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.0.5",
