--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@emailjs/browser": "^4.4.1",
+    "ngx-mat-select-search": "^8.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
