--- a/angular.json
+++ b/angular.json
@@ -19,9 +19,7 @@
           "options": {
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": [],
             "inlineStyleLanguage": "scss",
             "assets": [
               {
